--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.6.8",
     "primevue": "^3.51.0",
     "vue": "^3.4.21",
     "vue-router": "^4.3.2"
