--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.6.8",
+    "json-server": "^1.0.0-alpha.23",
     "primevue": "^3.51.0",
     "vue": "^3.4.21",
     "vue-router": "^4.3.2"
